fix filters dropdown arrow spacing

--- a/components/recipes/Filters/Filters.module.css
+++ b/components/recipes/Filters/Filters.module.css
@@ -62,12 +62,22 @@
 }
 
 .input {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
   width: 179px;
-  height: 38px;
+  height: 33px;
   border: 1px solid #d9d9d9;
   border-radius: 8px;
-  padding: 0 12px;
+  padding: 0 36px 0 12px;
+
   background-color: #ffffff;
+  background-image: url("/icons/chevron-down.svg");
+  background-repeat: no-repeat;
+  background-position: right 16px center;
+  background-size: 12px 6px;
+
   color: #3d2218;
   font-size: 14px;
   outline: none;
